# Reconstruction3D

./: .editorconfig  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  README.txt~  data.txt~
matlab/: Completely reconstructed pts (from scratch).ply  Fund_matches.txt  TestFile.m  X2 from 12.ply  X2 from 23 resizé.ply  X2 from 23.ply  X_2_from_12.ply  checkF.m  compute_fund_mat.m  cv_triangulate.m  depth_pt.m  display_cpp_result_ply.m  fundMat.txt  image pair 23 + rotation + translation X_original1.ply  image pair 23 + rotation + translation.ply  image pair 23.ply  matches.txt  matlab_3d_pts.ply  matlab_triangl_results.ply  reconstruct.m  reconstruct.ply  reconstructCUSTOM.ply  reconstructed pts.ply  rq.m  save_fundMat.m  save_matches.m  skew_sym_mat.m  write_results_ply.m
matlab/html/: TestFile.html
matlab/test/: get_Rt_from_essential_mat.m  init3dpts.m  my_rotationVectorToMatrix.m  plot_2d_pts.m  project_pts.m  visualize_3d_pts.m
src/: features.cpp  features.h  features.h~  main.cpp  utils.cpp  utils.h
